fix: Layout shifts on initial load on desktop

--- a/src/client/components/Header/Header.module.css
+++ b/src/client/components/Header/Header.module.css
@@ -72,4 +72,8 @@
   &:hover svg {
     fill: var(--hover);
   }
+
+  @media (--mq-large) {
+    display: none;
+  }
 }
